--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,4 @@
-<!--
-  Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobiwave/simplefolio/
-  Readme: https://github.com/cobiwave/simplefolio/README.md
-  -
-  For business & inquires, contact me -> jacobojavier98@gmail.com
--->
+
 <!DOCTYPE html>
 <html lang="en" class="sr">
   <head>
@@ -18,11 +8,11 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title> Opeyemi Odebode | Software Engineer </title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="[surahj], Opeyemi Odebode, javascript, Python, React, Flask, Node, C " />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Opeyemi Odebode | Developer | Software Engineer" />
 
     <link
       rel="stylesheet"
@@ -46,9 +36,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Opeyemi Odebode </span>
           <br />
-          I'm the Unknown Developer.
+          I work as a Software Engineer.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -115,8 +105,8 @@
                 <h3 class="project-wrapper__text-title">Project Title 0</h3>
                 <div>
                   <p class="mb-4">
-                    Describe the project being very specific, you can use the Twitter standard: no more than 280 characters: 
-                    complement the information: the skills learned or reinforced in its realization and how you faced it, 
+                    Describe the project being very specific, you can use the Twitter standard: no more than 280 characters:
+                    complement the information: the skills learned or reinforced in its realization and how you faced it,
                     prove to be proactive in the search for solutions.
                   </p>
                 </div>
@@ -167,8 +157,8 @@
                 <h3 class="project-wrapper__text-title">Project Title 1</h3>
                 <div>
                   <p class="mb-4">
-                    Demonstrate in this description the skills of a programmer: such as having commitment, 
-                    having perseverance and accepting alternative solutions. Remember that being a portfolio you are not selling the project, 
+                    Demonstrate in this description the skills of a programmer: such as having commitment,
+                    having perseverance and accepting alternative solutions. Remember that being a portfolio you are not selling the project,
                     you are selling yourself, it reflects the resources used: Frameworks, libraries, platforms, etc.
                   </p>
                 </div>
@@ -219,7 +209,7 @@
                 <h3 class="project-wrapper__text-title">Project Title 2</h3>
                 <div>
                   <p class="mb-4">
-                    If the project was collaborative, reflect it in this description, that will demonstrate communication and/or leadership skills. 
+                    If the project was collaborative, reflect it in this description, that will demonstrate communication and/or leadership skills.
                     Additionally, if you made use of the mastery of a second language, it will reflect on you professionalism.
                   </p>
                 </div>
@@ -326,7 +316,7 @@
             >Fork</a
           >
           <a
-            rel="noreferrer" 
+            rel="noreferrer"
             class="github-button"
             href="https://github.com/cobiwave/simplefolio"
             data-icon="octicon-star"
