--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" class="sr">
   <head>
@@ -8,11 +7,17 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title> Opeyemi Odebode | Software Engineer </title>
+    <title>Opeyemi Odebode | Software Engineer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[surahj], Opeyemi Odebode, javascript, Python, React, Flask, Node, C " />
+    <meta
+      name="keywords"
+      content="[surahj], Opeyemi Odebode, javascript, Python, React, Flask, Node, C "
+    />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="Opeyemi Odebode | Developer | Software Engineer" />
+    <meta
+      name="description"
+      content="Opeyemi Odebode | Developer | Software Engineer"
+    />
 
     <link
       rel="stylesheet"
@@ -61,7 +66,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="assets/pppp.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -69,11 +74,35 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you have!
+                As a highly motivated and skilled software engineer, I am
+                confident in my ability to make a positive impact on your team.
+                With a strong foundation in computer science, mathematics and a
+                passion for problem solving, I have the skills and experience
+                necessary to design, develop, and maintain software systems of
+                the highest quality.
+                <br /><br />
+                I am proficient in a variety of programming languages, including
+                C, Python, Javascript, and I am comfortable working in both
+                front-end and back-end development.
+                <br /><br />
+                I am able to analyze user requirements and translate them into
+                functional code, and I have a strong attention to detail that
+                allows me to catch and fix bugs quickly.
+                <br /><br />
+
+                In every of my previous team, I have consistently demonstrated
+                my ability to work well in a team environment and effectively
+                communicate with both technical and non-technical stakeholders.
+                <br />
+                I am comfortable taking on new challenges and thrive in
+                fast-paced, dynamic work environments.
+
+                <!-- I am excited about the opportunity to join your team and
+                contribute my skills and experience to the success of your
+                software development projects. -->
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                <!-- Extra Information about you! like hobbies and your goals. -->
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -102,27 +131,39 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">fyyur_app</h3>
                 <div>
                   <p class="mb-4">
-                    Describe the project being very specific, you can use the Twitter standard: no more than 280 characters:
+                    <!-- Describe the project being very specific, you can use the Twitter standard: no more than 280 characters:
                     complement the information: the skills learned or reinforced in its realization and how you faced it,
-                    prove to be proactive in the search for solutions.
+                    prove to be proactive in the search for solutions. -->
+                    Fyyur is a musical venue and artist booking site that
+                    facilitates the discovery and booking of shows between local
+                    performing artists and venues. This site lets you list new
+                    artists and venues, discover them, and list shows with
+                    artists as venue owners.
+                    <!-- <br /><br />
+                    Executed complex database queries on related data models.
+                    <br />
+                    Ensured users can create, update and delete data through the
+                    form.
+                    <br />
+                    Used Postgres and SQLAlchemy for the database. -->
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://raw.githubusercontent.com/surahj/fyyur_app/eed86a20516b4cdbdb65a944a072334b999304d3/demo.gif"
                 >
-                  See Live
+                  View Demo
                 </a>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/surahj/fyyur_app"
                 >
                   Source Code
                 </a>
@@ -130,7 +171,11 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a
+                  rel="noreferrer"
+                  href="https://raw.githubusercontent.com/surahj/fyyur_app/eed86a20516b4cdbdb65a944a072334b999304d3/demo.gif"
+                  target="_blank"
+                >
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -141,7 +186,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/fyyur.png.png"
                     />
                   </div>
                 </a>
@@ -154,27 +199,32 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Triva App</h3>
                 <div>
                   <p class="mb-4">
-                    Demonstrate in this description the skills of a programmer: such as having commitment,
-                    having perseverance and accepting alternative solutions. Remember that being a portfolio you are not selling the project,
-                    you are selling yourself, it reflects the resources used: Frameworks, libraries, platforms, etc.
+                    Trivia App is an app that Display questions - both all
+                    questions and by category. Questions should show the
+                    question, category and difficulty rating by default and can
+                    show/hide the answer. Delete questions. Add questions and
+                    require that they include question and answer text. Search
+                    for questions based on a text query string. Play the quiz
+                    game, randomizing either all questions or within a specific
+                    category.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://raw.githubusercontent.com/surahj/trivia_app/main/demo.gif"
                 >
-                  See Live
+                  See Demo
                 </a>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/surahj/trivia_app"
                 >
                   Source Code
                 </a>
@@ -182,7 +232,11 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a
+                  rel="noreferrer"
+                  href="https://raw.githubusercontent.com/surahj/trivia_app/main/demo.gif"
+                  target="_blank"
+                >
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -193,7 +247,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/trivia.png"
                     />
                   </div>
                 </a>
@@ -209,8 +263,11 @@
                 <h3 class="project-wrapper__text-title">Project Title 2</h3>
                 <div>
                   <p class="mb-4">
-                    If the project was collaborative, reflect it in this description, that will demonstrate communication and/or leadership skills.
-                    Additionally, if you made use of the mastery of a second language, it will reflect on you professionalism.
+                    If the project was collaborative, reflect it in this
+                    description, that will demonstrate communication and/or
+                    leadership skills. Additionally, if you made use of the
+                    mastery of a second language, it will reflect on you
+                    professionalism.
                   </p>
                 </div>
                 <a
@@ -262,13 +319,16 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">
+            I’m always interested in hearing about new projects and
+            opportunities.
+          </p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="https://www.linkedin.com/in/surahj/"
+            >Contact Me</a
           >
         </div>
       </div>
@@ -282,13 +342,21 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a
+            rel="noreferrer"
+            href="https://twitter.com/odebodeopeyemi"
+            target="_blank"
+          >
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a
+            rel="noreferrer"
+            href="https://www.linkedin.com/in/surahj/"
+            target="_blank"
+          >
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -297,33 +365,9 @@
 
         <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
         <p class="footer__text">
-          © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobiwave" target="_blank"
-            >Jacobo Martínez</a
-          >
-        </p>
-
-        <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobiwave/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobiwave/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobiwave/simplefolio on GitHub"
-            >Star</a
+          © 2023 -
+          <a rel="noreferrer" href="https://github.com/surahj" target="_blank"
+            >Opeyemi Odebode</a
           >
         </p>
       </div>
