--- a/src/index.html
+++ b/src/index.html
@@ -260,14 +260,17 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">Coffee Shop</h3>
                 <div>
                   <p class="mb-4">
-                    If the project was collaborative, reflect it in this
-                    description, that will demonstrate communication and/or
-                    leadership skills. Additionally, if you made use of the
-                    mastery of a second language, it will reflect on you
-                    professionalism.
+                    Udacity has decided to open a new digitally enabled cafe for
+                    students to order drinks, socialize, and study hard. But
+                    they need help setting up their menu experience.
+                    <br /><br />
+                    Wrote a script in python to create RESTful APIs for the
+                    backend. Authenticates and Authorizes users. Ensured that
+                    users have access to the items in the shop according to
+                    their permissions.
                   </p>
                 </div>
                 <a
@@ -276,13 +279,13 @@
                   class="cta-btn cta-btn--hero"
                   href="#!"
                 >
-                  See Live
+                  <!-- See Live -->
                 </a>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/surahj/coffe_shop"
                 >
                   Source Code
                 </a>
@@ -290,7 +293,11 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a
+                  rel="noreferrer"
+                  href="https://github.com/surahj/coffe_shop"
+                  target="_blank"
+                >
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -301,7 +308,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/coffe_shop.jpg"
                     />
                   </div>
                 </a>
