--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Opeyemi Odebode </span>
           <br />
-          I work as a Software Engineer.
+          Software Engineer.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
