--- a/src/index.html
+++ b/src/index.html
@@ -273,14 +273,14 @@
                     their permissions.
                   </p>
                 </div>
-                <a
+                <!-- <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
                   href="#!"
                 >
-                  <!-- See Live -->
-                </a>
+                  See Live
+                </a> -->
                 <a
                   rel="noreferrer"
                   target="_blank"
